@@ -20,8 +20,8 @@ PutCEL=53
 
 [DrawArea]
 Zoom=2
-ZoomLeft=-141
-ZoomTop=-34
+ZoomLeft=-112
+ZoomTop=-83
 
 [BasicControls]
 Tool0=DRAW
@@ -38,7 +38,7 @@ Ink3=L GRAD
 Ink4=H GRAD
 Ink5=H GRAD
 ActiveInk=0
-FillShapes=No
+FillShapes=Yes
 ClearKeyColor=No
 UseAlpha=No
 
@@ -55,5 +55,5 @@ Selected4=4
 Selected5=5
 Selected6=6
 Selected7=7
-ActiveColor=6
+ActiveColor=2
 
